day-5/ingress-example/nginx-hello-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello # The name of your deployment
  labels:
    app: hello  # The label of your deployment
spec:
  replicas: 1 # Number of replicated pods
  selector:
    matchLabels:
      app: hello # defines how the Deployment finds which Pods to manage. Should match labels defined in the Pod template
  template:
    metadata:
      labels:
        app: hello # The label of the pod to match selectors
    spec:
      containers:
      - name: hello # The container name
        image: nginx # The DockerHub image
        ports:
        - containerPort: 80 # Open pod port 80 for the container
