day-5/ingress-example/hello-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: hello  # The name of your service
spec:
  selector:
    app: hello  # defines how the Service finds which Pods to target. Should match labels defined in the Pod template
  ports:
  - protocol: TCP
    port: 80 # The service port
    targetPort: 80 # The pods port
