day-5/ingress-example/3-ingress-hello-world-html.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hello-world
spec:
  rules:
    - http:
        paths:
          - pathType: ImplementationSpecific
            path: "/hello.html"
            backend:
              service:
                name: hello
                port:
                  number: 80
          - pathType: ImplementationSpecific
            path: "/world.html"
            backend:
              service:
                name: world
                port:
                  number: 80
